--- a/tex/design-patterns/sem4-iv1350-ferrigan.tex
+++ b/tex/design-patterns/sem4-iv1350-ferrigan.tex
@@ -266,6 +266,17 @@ The entire program can be found here:
 \subsubsection*{GitHub-Repo}
 \url{https://github.com/VincentFerrigan/kth-iv1350-point-of-sale}
 
+\section*{Output}
+
+\subsubsection*{Basic flow}
+\href{https://github.com/VincentFerrigan/kth-iv1350-object-oriented-design/tree/main#basic-flow}{Basic-flow-gif}
+
+\subsubsection*{Alternative flows}
+\href{https://github.com/VincentFerrigan/kth-iv1350-object-oriented-design/tree/main#alternative-flows}{Alternative-flows-gif}
+
+\subsubsection*{Exceptions}
+\href{https://github.com/VincentFerrigan/kth-iv1350-object-oriented-design/tree/main#exceptions}{Exceptions-gif}
+
 %\section{The Class Diagram}
 %\begin{figure}[h!]
 %    \begin{center}
