--- a/tex/implementation/sem3-iv1350-ferrigan.tex
+++ b/tex/implementation/sem3-iv1350-ferrigan.tex
@@ -187,10 +187,10 @@ Subsequently, a Controller instance is created using these previously establishe
 The Main method then proceeds to create a View instance,
 with the Controller passed as an argument.
 Following this,
-the View (representing the cashier or, in this specific case, the method "hardkodadegrejer")
+the View (representing the cashier or, in this specific case, the sample methods)
 initiates calls to the Controller.
 
-The entire program can be found here:
+The entire program and sample outputs can be found here:
 
 \subsubsection*{GitHub-Repo}
 \url{https://github.com/VincentFerrigan/kth-iv1350-object-oriented-design}
@@ -218,7 +218,7 @@ The entire program can be found here:
 
     \begin{figure}[h!]
         \begin{center}
-            \includegraphics[width=\textwidth]{../../uml/output/uml_v3}
+            \includegraphics[width=\textwidth]{../../uml/prev-uml/sem3/output/uml_v3}
             \caption{The Class Diagram}
             \label{fig:CD}
         \end{center}
@@ -226,7 +226,7 @@ The entire program can be found here:
 
     \begin{figure}[h!]
         \begin{center}
-            \includegraphics[width=\textwidth]{../../uml/output/uml_v3_001}
+            \includegraphics[width=\textwidth]{../../uml/prev-uml/sem3/output/uml_v3_001}
             \caption{The DTOs (Data Transfer Objects)}
             \label{fig:DTO}
         \end{center}
@@ -237,7 +237,7 @@ The entire program can be found here:
 \subsubsection*{The Start up, Main System Operation}
 \begin{figure}[h!]
     \begin{center}
-        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_002}
+        \includegraphics[width=\textwidth]{../../uml/prev-uml/sem3/output/uml_v3_002}
 %        \includegraphics[trim=0cm 0cm 0cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
 %        \caption{The Start Up \verb|Main| system operations}
         \caption{The Start Up Main system operations}
@@ -248,7 +248,7 @@ The entire program can be found here:
 \subsubsection*{The StartSale System Operations}
 \begin{figure}[h!]
     \begin{center}
-        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_003}
+        \includegraphics[width=\textwidth]{../../uml/prev-uml/sem3/output/uml_v3_003}
 %        \includegraphics[trim=0cm 0cm 51cm 0cm ,clip, width=\textwidth]{../uml/output/uml_v3.png}
 %        \caption{The \verb|startSale| system operation }
         \caption{The startSale system operation }
@@ -260,7 +260,7 @@ The entire program can be found here:
 \subsubsection*{The registerItem System Operations}
 \begin{figure}[h!]
     \begin{center}
-        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_004}
+        \includegraphics[width=\textwidth]{../../uml/prev-uml/sem3/output/uml_v3_004}
 %        \includegraphics[trim=0cm 0cm 40cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
 %        \caption{The \verb|registerItem| system operation }
         \caption{The registerItem operation }
@@ -286,7 +286,7 @@ The entire program can be found here:
 \subsubsection*{The endSale System Operations}
 \begin{figure}[h!]
     \begin{center}
-        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_005}
+        \includegraphics[width=\textwidth]{../../uml/prev-uml/sem3/output/uml_v3_005}
 %        \includegraphics[trim=0cm 0cm 50cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
 %        \caption{The \verb|endSale| system operation }
         \caption{The endSale system operation }
@@ -312,7 +312,7 @@ The entire program can be found here:
 \subsubsection*{The discountRequest System Operations}
 \begin{figure}[h!]
     \begin{center}
-        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_006}
+        \includegraphics[width=\textwidth]{../../uml/prev-uml/sem3/output/uml_v3_006}
 %        \includegraphics[trim=0cm 0cm 30cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
         \caption{The discoutRequest system operation }
         \label{fig:SD3}
@@ -322,7 +322,7 @@ The entire program can be found here:
 \subsubsection*{The addPayment System Operations}
 \begin{figure}[h!]
     \begin{center}
-        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_007}
+        \includegraphics[width=\textwidth]{../../uml/prev-uml/sem3/output/uml_v3_007}
 %        \includegraphics[trim=0cm 0cm 0cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
 %        \caption{The \verb|addPayment| system operation }
         \caption{The addPayment system operation }
@@ -406,7 +406,8 @@ if a test should fail.
 We have also followed the correct structure so that the
 tests are not located under the source folder for the program.
 
-Not all tests have been written yet, which is something I intend to do prior to the next seminar.
+%TODO Ta bort nedan ifall du gjort alla tester:
+%Not all tests have been written yet, which is something I intend to do prior to the next seminar.
 
 %As mentioned earlier, the group found Sequence diagrams to be more notationally rich and advantageous
 %over communication diagrams.
