--- a/tex/design-patterns/sem4-iv1350-ferrigan.tex
+++ b/tex/design-patterns/sem4-iv1350-ferrigan.tex
@@ -12,6 +12,7 @@
 \usepackage{pgf}
 \usepackage{wrapfig}
 \usepackage{fancyvrb}
+\usepackage{float}
 
 %\usepackage[style=ieee]{biblatex} % om du vill köra ieee (tror leif kör den)
 \usepackage[backend=biber,style=vancouver]{biblatex}
@@ -28,11 +29,14 @@
 % \usepackage{minted}
 \usepackage[outputdir=output/tex]{minted} % iom min makefile
 
+
+
 \usepackage[font=footnotesize,labelfont=bf,skip=2pt]{caption}
 \usepackage{hyperref}
 \newenvironment{longlisting}{\captionsetup{type=listing}}{}
 % \renewcommand\listoflistingscaption{Källkod....}
 \renewcommand\listoflistingscaption{List of source codes}
+\setmintedinline[java]{breaklines=true,breakanywhere=true} % necessary for breakanywhere to work later on.
 
 \usepackage{paralist} %Inline lists
 
@@ -85,29 +89,7 @@ total income and a second class called \mintinline{java}{TotalRevenueFileOutput}
 income to a file.
 
 The second part of the second task, \emph{task 2b}, involved refactoring other parts of
-the code to two more GoF patterns.
-Here the author chose to implement
-\begin{enumerate}
-\item \textbf{The Creational Patterns}
-\begin{enumerate}
-    \item \emph{Singleton},
-    \item \emph{Abstract Factory} and
-    \item \emph{Factory method}.
-\end{enumerate}
-\item \textbf{The Structural Patterns}
-\begin{enumerate}
-    \setcounter{enumi}{3}
-    \item \emph{Composite} and
-    \item \emph{Facade}.
-\end{enumerate}
-\item \textbf{The Behavioral Patterns}
-\begin{enumerate}
-    \setcounter{enumi}{5}
-    \item \emph{Observer},
-    \item \emph{Strategy} and
-    \item \emph{Template Method}.
-\end{enumerate}
-\end{enumerate}
+the code to two or more GoF patterns.
 
 %\textbf{Creational Patterns}
 %\begin{inparaenum}[1)]
@@ -153,6 +135,7 @@ As a result, the system design was continuously refined,
 allowing for more clean and maintainable code and a greater ease to add new code.
 
 \section*{The project's resources and the system's configuration and data}
+\label{sec:resources}
 Instead of hard-coding data in the integration classes,
 flat file databases are used to store records.
 These CSV-files store,
@@ -196,7 +179,7 @@ This enables testing classes in both the integration and util layer package.
         lastline=25,
 %        frame=single,
         fontsize=\footnotesize,
-    ]{java}{../../src/test/resources/config.properties}
+    ]{bash}{../../src/test/resources/config.properties}
     \caption{The Config Properties file for the JUnit tests.}
     \label{listing:test-config.properties}
 \end{longlisting}
@@ -217,6 +200,13 @@ This enables testing classes in both the integration and util layer package.
 \end{longlisting}
 
 
+\newpage
+\chapter{Result}
+\label{sec:result}
+The entire program can be found here:
+
+\subsubsection*{GitHub-Repo}
+\url{https://github.com/VincentFerrigan/kth-iv1350-object-oriented-design}
 
 \section*{Task 1 - Exceptions}
 \emph{Checked exceptions} are usually used for error handling business logic while
@@ -230,10 +220,8 @@ and creates a message to inform the user that there is no
 item with the item identifier that was provided to the system, along with the incorrect item
 identifier.
 This exception is then passed through the system and is caught in the View, where it is
-logged and handled.
-The developer gets notified by an error-log and the user gets notified by a message.
-
-
+handled.
+The user gets notified by an error message.
 
 The exception is declared in the signature of each method between the throw from the
 integration layer %(Item Registry)
@@ -271,6 +259,10 @@ All the above mentioned unchecked exceptions %for registry, pricing strategies a
 are caught and rethrown as the programs own checked
 exception \mintinline{java}{OperationFailedException}
 by the \verb|Controller|.
+It is in this try-catch statement that the developer gets notified by an error-log.
+This exception is then caught in the \verb|View|, where it is
+handled.
+The user gets notified by an error message.
 
 \mintinline{java}{ItemNotFoundException} is manually tested by the sample method
 \mintinline{java}{alternativeFlow3AWithCheckedExceptions()}
@@ -280,9 +272,6 @@ The output of this alternative flow is demonstrated in
 \href{https://github.com/VincentFerrigan/kth-iv1350-object-oriented-design#alternative-flow---checked-exception-business-logic}{Alternative-flow-3a-gif}
 and illustrated in
 figure ~\ref{fig:reg-item}, ~\ref{fig:item-not-in-shopping-cart}, ~\ref{fig:notify-sale-observers} and ~\ref{fig:notify-users-developers}
-
-\subsubsection*{Alternative Flow -- Unchecked Exception}
-\href{https://github.com/VincentFerrigan/kth-iv1350-object-oriented-design#alternative-flow---unchecked-exception}{Unchecked-exception-gif}
 
 \mintinline{java}{ItemRegistryException} and \mintinline{java}{OperationFailedException}
 are tested manually
@@ -294,56 +283,194 @@ The output of this alternative flow is demonstrated in
 and also illustrated by
 figure ~\ref{fig:reg-item}, ~\ref{fig:item-not-in-shopping-cart}, ~\ref{fig:notify-sale-observers} and ~\ref{fig:notify-users-developers}
 
-% TODO lägg till hur du implementerade alt. flow 3a, unchekced och notifieringar. Med UML? Test skriv om i test avsnittet
-% TODO skriv att gällande notifieringar till användare och utvecklar, så implementerade du dessa med ett interface och med The Singleton Design Pattern.
+\subsubsection{Logging exceptions and notifying users and developers}
+Both the \mintinline{java}{ErrorMessageHandler} and \mintinline{java}{ErrorFileLogHandler}
+are \emph{Singletons} that implement the \mintinline{java}{Logger} interface.
+They create a message from the exceptions
+caught.
+\mintinline{java}{ErrorMessageHandler}
+is responsible for showing error messages to the user.
+It's a dummy implementation that prints to
+\mintinline{java}{System.out} while
+\mintinline{java}{ErrorMessageHandler}
+is responsible for logging errors to a specific file.
+This processes is demonstrated in
+\href{https://github.com/VincentFerrigan/kth-iv1350-object-oriented-design#alternative-flow---unchecked-exception}{Alternative-flow-unchecked-exception-gif}
+and illustrated in
+figure ~\ref{fig:reg-item} and ~\ref{fig:notify-users-developers}
 
-
-%TODO Presentera Exceptiontesterna
-
+\newpage
 \section*{Task 2 - Refactoring to Patterns}
-%TODO  Observer först. 2a men att du även använd the template method och singleton (referera till Additional Task rapporten????)
+In total, the following eight GoF design patterns are implemented:
+\begin{enumerate}
+    \item \textbf{The Creational Patterns}
+    \begin{enumerate}
+        \item \emph{Singleton},
+        \item \emph{Abstract Factory} and
+        \item \emph{Factory method}.
+    \end{enumerate}
+    \item \textbf{The Structural Patterns}
+    \begin{enumerate}
+        \setcounter{enumi}{3}
+        \item \emph{Composite} and
+        \item \emph{Facade}.
+    \end{enumerate}
+    \item \textbf{The Behavioral Patterns}
+    \begin{enumerate}
+        \setcounter{enumi}{5}
+        \item \emph{Observer},
+        \item \emph{Strategy} and
+        \item \emph{Template Method}.
+    \end{enumerate}
+\end{enumerate}
 
-\subsubsection{Discount and promotion algorithms}
-Conditional discount logic can be replaced with a combination of the Strategy, Factory and Composite Pattern.
+\subsubsection{The observer and template method design pattern}
+The Observer design-pattern is applied not only for the task at hand (revenue updates)
+but also for displaying sale details.
+The display is updated each time an item is added to the shopping cart
+and during end-of-sale.
+The latter is performed in order to display possible discounts.
+
+The outcome of refactoring with the observer-pattern
+is demonstrated in all samples included in the README file,
+and therefore presented on the GitHub repository page.
+How the observers are added to the observables are illustrated both
+in figure ~\ref{fig:start-up} and ~\ref{fig:start-sale}.
+The sale observers are notified in \mintinline{java}{Sale} by the
+\mintinline{java}{addItem()} and
+\mintinline{java}{endSale()} method
+(see figure ~\ref{fig:reg-item}, ~\ref{fig:end-sale}
+and ~\ref{fig:notify-sale-observers}),
+while the cash register observers are notified in
+\mintinline{java}{CashRegister} by the
+\mintinline{java}{addPayment()} method
+(see figure \ref{fig:pay} and ~\ref{fig:notify-cashregister-observer}).
+The former displays sale details (including the shopping cart)
+and the latter displays the total revenue
+when it has changed.
+
+Since the observers perform similar steps in the same order,
+the Template Method design-pattern is used.
+The abstract class \mintinline{java}{SaleView} is the template
+for sale observers
+while the abstract class \mintinline{java}{TotalRevenue}
+acts as the template for cash register observers
+(see the class diagram in figure ~\ref{fig:CD} for further details).
+%duplicated code was eliminated by using the Template Method Pattern.
+
+The observers are only exposed to certain methods or attributes.
+For example, a limited view of a particular sale is sent to the
+sale observers by using an ''observered-interface'' called
+\mintinline{java}{LimitedSaleView}.
+This interface is implemented by the wrapper class
+\mintinline{java}{LimitedSaleViewWrapper} that
+only exposes certain Sale methods.
+
+All logging systems in this program, which includes the observer that logs the total revenue to a file,
+should only have one instance of the logger,
+as multiple loggers can cause inconsistent and cluttered logs.
+The Singleton pattern is therefore applied to create a
+single logger instance.
+This instance can be accessed from different parts of the code.
+
+\subsubsection{The facade as interface for a set of registry interfaces}
+The previous RegisterCreator (see previous seminars) was refactored to Facade.
+A facade provides a unified interface to a
+set of interfaces in a subsystem [GoF, "Design Patterns"].
+Here it represents a ''service container'' where the Facade Design pattern was applied.
+This service container is responsible for instantiating all registers
+(external systems/databases) and provides
+a unified and simplified interface for the client classes.
+
+The Abstract Factory was used with Facade to provide an
+interface for creating registry objects
+(see \mintinline{java}{IRegistryFactory}
+and \mintinline{java}{FlatFileDatabaseFactory} in figure ~\ref{fig:facade}
+
+Both the facade and the registries are implemented as
+Singletons since only one facade per subsystem is needed.
+Please note howevever, that the \mintinline{java}{SaleLog}
+is not implemented as a Singleton.
+
+%a single instance available to all of the program, for example, a single database object shared by different parts of the program.g
+
+\subsubsection{Discount and promotion algorithms - a combination of Strategy and Composite Patterns}
+Conditional discount logic can be replaced with
+a combination of the Strategy and Composite Pattern.
 Here, each discount (or promotion) algorithm
 can be defined in a separate strategy-class, but with a common interface
 (see listing ~\ref{listing:discount-strategy}).
 
-Knowing, however, which discount to choose from requires a third pattern.....
-The need to substitute or add discounts at runtime required....
-Creational knowledge is also moved to the factory, since discounts will be substituted or added at runtime (and after deployment )
+Knowing, however, which discount strategy to choose from
+can be solved with the composite design-pattern.
+This ''Composite-Discount-Strategy''
+(shown in the listing ~\ref{listing:discount-composite})
+performs multiple discount and promotion algorithms but chooses only chooses
+one of them -- the one that returns the lowest total price.
+
+\subsubsection*{Adding or substituting discounts - The Factory Method}
+The Factory Method is applied in order to enable the developers (or users) to substitute
+or add discounts.
+Here even the creational knowledge is moved to the factory,
+since discounts and promotions can be substituted or added at runtime (and after deployment).
+The Discount Factory class is shown in listing ~\ref{listing:discount-factory}.
+
+The class names of the objects a \emph{Factory} can create, 
+can be added in the in the project's \verb|Config.Properties| 
+file under \verb|src/main/resources| 
+(see section \ref{sec:resources} on project resources and systems configuration).
 
 \begin{longlisting}
     \inputminted[
         label=The common Discount-Strategy Interface,
         linenos=true,
         bgcolor=lightgray,
-        firstline=6,
-        lastline=20,
+        firstline=11,
+        lastline=21,
 %        frame=single,
         fontsize=\footnotesize,
     ]{java}{../../src/main/se/kth/iv1350/integration/pricing/DiscountStrategy.java}
-    \caption{Caption text av något slag.}
+    \caption{Discount strategy defining the ability to calculate total price.
+        This interface shall be implemented by a class providing a promotion or
+        discount algorithm.}
     \label{listing:discount-strategy}
 \end{longlisting}
 
+\begin{longlisting}
+    \inputminted[
+        label=The Compostie Discount-Strategy,
+        linenos=true,
+        bgcolor=lightgray,
+        firstline=16,
+        lastline=70,
+%        frame=single,
+        fontsize=\footnotesize,
+    ]{java}{../../src/main/se/kth/iv1350/integration/pricing/CompositeDiscountStrategy.java}
+    \caption{A DiscountStrategy, which performs multiple discount and promotion algorithms.
+        All these algorithms that are added to this composite are executed,
+        and the lowest total price is found.
+        }
+    \label{listing:discount-composite}
+\end{longlisting}
 
-and some duplicated code was eliminated by using the Template Method Pattern.
+\begin{longlisting}
+    \inputminted[
+        label=The Discount-Factory,
+        linenos=true,
+        bgcolor=lightgray,
+        firstline=10,
+        lastline=73,
+%        frame=single,
+        fontsize=\footnotesize,
+    ]{java}{../../src/main/se/kth/iv1350/integration/pricing/DiscountFactory.java}
+    \caption{A Discount Factore implmented as a
+        Singleton that creates instances of the algorithm used for calculating total price with
+        discounts or promotions.
+        All such instances must implement DiscountStrategy.}
+    \label{listing:discount-factory}
+\end{longlisting}
 
-
-%a single instance available to all of the program, for example, a single database object shared by different parts of the program.g
-
-\newpage
-\chapter{Result}
-\label{sec:result}
-
-The entire program can be found here:
-
-\subsubsection*{GitHub-Repo}
-\url{https://github.com/VincentFerrigan/kth-iv1350-point-of-sale}
-
-\section*{Output}
-
+\section*{Output-samples}
 \subsubsection*{Basic flow}
 \href{https://github.com/VincentFerrigan/kth-iv1350-object-oriented-design/tree/main#basic-flow}{Basic-flow-gif}
 
@@ -364,7 +491,7 @@ The entire program can be found here:
 %\section{The Class Diagram}
 %\begin{figure}[h!]
 %    \begin{center}
-%        \includegraphics[width=\textwidth]{uml/output/CD_Sem1}
+%        \includegraphics[width=\textwidth]{../../uml/output/CD_Sem1}
 %        \caption{The class diagram after all system operations have been designed.}
 %        \label{fig:CD}
 %    \end{center}
@@ -376,57 +503,130 @@ The entire program can be found here:
 %All possible attributes and methods that belong to a class (including their parameters) are shown.
 %In other words, all methods (and parameters) that were depicted in the Interaction Diagrams are all
 %collected and grouped here in the Class Diagram.
-%\newpage
-%%\begin{landscape}
-%    \section*{The Refined Design}
-%    \subsection*{Class Diagram}
-%%    \newgeometry{left=0cm,right=0cm,top=0cm,bottom=0cm}
-%
-%    \begin{figure}[h!]
-%        \begin{center}
-%            \includegraphics[width=\textwidth]{../../uml/output/uml_v3}
-%            \caption{The Class Diagram}
-%            \label{fig:CD}
-%        \end{center}
-%    \end{figure}
-%
-%    \begin{figure}[h!]
-%        \begin{center}
-%            \includegraphics[width=\textwidth]{../../uml/output/uml_v3_001}
-%            \caption{The DTOs (Data Transfer Objects)}
-%            \label{fig:DTO}
-%        \end{center}
-%    \end{figure}
-%
-%\newpage
-%\subsection*{System Operations}
-%\subsubsection*{The Start up, Main System Operation}
-%\begin{figure}[h!]
-%    \begin{center}
-%        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_002}
-%%        \includegraphics[trim=0cm 0cm 0cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
-%%        \caption{The Start Up \verb|Main| system operations}
-%        \caption{The Start Up Main system operations}
-%        \label{fig:SD5}
-%    \end{center}
-%\end{figure}
+\chapter{Discussion}
+\label{sec:discussion}
+\section*{Exception Handling}
+The system uses both checked and unchecked exceptions based on the situation, correctly
+reflecting the abstraction level for the exceptions.
+For instance, \mintinline{java}{ItemNotFoundException} is used when an item is not found in the item registry,
+appropriately named after the error condition and provides enough information about the error.
+Moreover, exceptions like
+\mintinline{java}{ItemRegistryException} and
+\mintinline{java}{OperationFailedException} are tested,
+satisfying the requirement of writing unit tests for the exception handling.
+
+The system also includes javadoc comments, follows the principle of an object not changing state when an exception is thrown,
+and notifies both users and developers.
+
+\section*{Refactoring to Patterns}
+I have tried to refactor to several design patterns, with the purpose of enhancing readability, modularity, and maintainability.
+One can find a variety of Creational, Structural, and Behavioral Patterns as per the GoF design patterns.
+The Singleton pattern is used for maintaining single logger instances and registries,
+Facade pattern is used to provide a simplified interface to the registries,
+and the Observer pattern is used to update sale and revenue displays.
+The template method is used to avoid duplicated code.
+The Factory method, Strategy and Composite pattern are all used for applying VAT, Discounts and promotions.
+
+The explanation and motivation for using design patterns are not always detailed in the text.
+I mention the use of various patterns but do not always provide the rationale for choosing those patterns.
+
+\subsubsection*{The observers and their observables}
+The system seems to have implemented the Observer pattern correctly with suitable objects.
+The \mintinline{java}{Sale} and \mintinline{java}{CashRegister} objects are observed while the observer objects
+are those that display sale details and total revenue.
+
+I claim that this is a logical choice,
+as any change in a sale or the cash register would require updating the displayed information.
+
+The observers are only exposed to certain methods or attributes,
+here I am implying that encapsulation is maintained, which promotes high cohesion and low coupling.
+
+The data passed from the observed object (\mintinline{java}{Sale}) to observers is the sale details,
+including the shopping cart details.
+It's passed through an interface (\mintinline{java}{LimitedSaleView}) which ensures that encapsulation is not broken,
+as it exposes only certain Sale methods.
+Therefore, it maintains the state of the observed object while still allowing the observer to update its display.
+
+\section*{Pattern Happy?}
+The patterns are implemented according to the GoF (Gang of Four) design patterns.
+The system implements Singleton, Abstract Factory, Factory method,
+Composite, Facade, Observer, Strategy, and Template Method.
+
+Probably an overuse of patterns.
+I became quite ''Pattern-Happy'', eager to use as many patterns I could possibly comprehend.
+\newpage
+\appendix
+\section*{Appendix A UML -- The Refined Design}
+\subsection*{Class Diagram}
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3}
+        \caption{The Class Diagram}
+        \label{fig:CD}
+    \end{center}
+\end{figure}
+
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_001}
+        \caption{Discount and VAT Factory.
+        Algorithms used for calculating total price with
+        disounts or promotions and for
+        calulating VAT for a specific item}
+        \label{fig:discount-vat-factories}
+    \end{center}
+\end{figure}
+
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_002}
+        \caption{The facade provides a unified interface to a
+        set of interfaces in a subsystem.
+        It represents a service container (implemented as a Facade).
+        This service container is responsible for instantiating all registers (external systems/databases) and provides
+        a unified and simplified interface for the client classes.
+        }
+        \label{fig:facade}
+    \end{center}
+\end{figure}
+
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_003}
+        \caption{The DTOs (Data Transfer Objects)}
+        \label{fig:DTO}
+    \end{center}
+\end{figure}
+
+\newpage
+\subsection*{System Operations}
+\subsubsection*{The Start up, Main System Operation}
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_004}
+%        \includegraphics[trim=0cm 0cm 0cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
+%        \caption{The Start Up \verb|Main| system operations}
+        \caption{The Start Up Main system operations}
+        \label{fig:start-up}
+    \end{center}
+\end{figure}
 %
 \subsubsection*{The StartSale System Operations}
-\begin{figure}[h!]
+\begin{figure}[H]
     \begin{center}
-        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_003.png}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_005.png}
 %        \includegraphics[trim=0cm 0cm 51cm 0cm ,clip, width=\textwidth]{../uml/output/uml_v3.png}
 %        \caption{The \verb|startSale| system operation }
-        \caption{The startSale system operation }
-        \label{fig:SD}
+        \caption{The Start Sale System Operation}
+        \label{fig:start-sale}
     \end{center}
 \end{figure}
 %%
 %\newpage
 \subsubsection*{The registerItem System Operations}
-\begin{figure}[h!]
+\begin{figure}[H]
     \begin{center}
-        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_004.png}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_006.png}
 %        \includegraphics[trim=0cm 0cm 40cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
 %        \caption{The \verb|registerItem| system operation }
         \caption{The register item operation, including checked and unchecked exceptions}
@@ -434,9 +634,9 @@ The entire program can be found here:
     \end{center}
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \begin{center}
-        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_005.png}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_007.png}
 %        \includegraphics[trim=0cm 0cm 40cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
 %        \caption{The \verb|registerItem| system operation }
         \caption{Item not previously found in shopping cart}
@@ -444,9 +644,9 @@ The entire program can be found here:
     \end{center}
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \begin{center}
-        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_006.png}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_008.png}
 %        \includegraphics[trim=0cm 0cm 40cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
 %        \caption{The \verb|registerItem| system operation }
         \caption{Notify sale observers}
@@ -454,40 +654,26 @@ The entire program can be found here:
     \end{center}
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \begin{center}
-        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_008.png}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_009.png}
 %        \includegraphics[trim=0cm 0cm 40cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
 %        \caption{The \verb|registerItem| system operation }
         \caption{Notify users and/or developers}
         \label{fig:notify-users-developers}
     \end{center}
 \end{figure}
-%\subsection*{Displaying the output of current sale}
-%\begin{longlisting}
-%    \inputminted[
-%        label= Output of a current sale,
-%        linenos=false,
-%%        bgcolor=lightgray,
-%        firstline=1,
-%        lastline=8,
-%%        frame=single,
-%        fontsize=\footnotesize,
-%    ]{bash}{output/outputs.txt}
-%    \caption{The Receipt printed to System.out}
-%    \label{listing:checkoutOutput}
-%\end{longlisting}
-%
-%\subsubsection*{The endSale System Operations}
-%\begin{figure}[h!]
-%    \begin{center}
-%        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_005}
-%%        \includegraphics[trim=0cm 0cm 50cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
-%%        \caption{The \verb|endSale| system operation }
-%        \caption{The endSale system operation }
-%        \label{fig:SD2}
-%    \end{center}
-%\end{figure}
+
+\subsubsection*{The endSale System Operations}
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=0.5\textwidth]{../../uml/output/uml_v3_010}
+%        \includegraphics[trim=0cm 0cm 50cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
+%        \caption{The \verb|endSale| system operation }
+        \caption{The endSale system operation}
+        \label{fig:end-sale}
+    \end{center}
+\end{figure}
 %
 %\subsubsection*{End of Sale - Displaying the output of a checkout}
 %\begin{longlisting}
@@ -504,77 +690,46 @@ The entire program can be found here:
 %    \label{listing:checkout}
 %\end{longlisting}
 %
-%\subsubsection*{The discountRequest System Operations}
-%\begin{figure}[h!]
-%    \begin{center}
-%        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_006}
-%%        \includegraphics[trim=0cm 0cm 30cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
-%        \caption{The discoutRequest system operation }
-%        \label{fig:SD3}
-%    \end{center}
-%\end{figure}
-%
-%\subsubsection*{The addPayment System Operations}
-%\begin{figure}[h!]
-%    \begin{center}
-%        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_007}
-%%        \includegraphics[trim=0cm 0cm 0cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
-%%        \caption{The \verb|addPayment| system operation }
-%        \caption{The addPayment system operation }
-%        \label{fig:SD4}
-%    \end{center}
-%\end{figure}
-%
-%\subsubsection*{Receipt}
-%\begin{longlisting}
-%    \inputminted[
-%        label= Receipt,
-%        linenos=false,
-%%        bgcolor=lightgray,
-%        firstline=73,
-%        lastline=91,
-%%        frame=single,
-%        fontsize=\footnotesize,
-%    ]{bash}{output/outputs.txt}
-%    \caption{The Receipt printed to System.out}
-%    \label{listing:receipt}
-%\end{longlisting}
-%
-%%    \restoregeometry
-%%\end{landscape}
-%
 
-\chapter{Discussion}
-\label{sec:discussion}
-* Does exception handling follow the nine bullets about exception handling best
-practices from chapter eight, which are specified in the lab tutorial?
-    * Choose between checked and unchecked exceptions.
-    * Use the correct abstraction level for exceptions.
-    * Name the exception after the error condition.
-    * Include information about the error condition.
-    * Use functionality provided in java.lang.Exception
-    * Write javadoc comments for all exceptions.
-    * An object shall not change state if an exception is thrown.
-    * Notify users.
-    * Notify developers.
-    * Write unit tests for the exception handling.
+\subsubsection*{The payment operation, discount, bonuspoints and promotion}
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_011}
+%        \includegraphics[trim=0cm 0cm 30cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
+        \caption{Register customer to sale.}
+        \label{fig:reg-customer}
+    \end{center}
+\end{figure}
 
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_012}
+%        \includegraphics[trim=0cm 0cm 0cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
+%        \caption{The \verb|addPayment| system operation }
+        \caption{The payment system operation}
+        \label{fig:pay}
+    \end{center}
+\end{figure}
 
-* Are pattern implementation(s) really correct implementations of the pattern(s).
-Sometimes it seems like this at a first glance even though there are severe flaws.
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=\textwidth]{../../uml/output/uml_v3_013}
+%        \includegraphics[trim=0cm 0cm 0cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
+%        \caption{The \verb|addPayment| system operation }
+        \caption{Pricing strategy}
+        \label{fig:pricing}
+    \end{center}
+\end{figure}
 
-* Is the use of design patterns explained and motivated?
-
-* Do you agree with choices of observer and observed object?
-
-* How is the reference to observer passed to observed object? Does this have bad
-effects on coupling or cohesion?
-
-* What data is passed from observed object to observer? Does this brake encapsulation of the observed object?
-
-* Is the method and result explained in the report? Is there a discussion? Is the
-discussion relevant?
-
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=0.5\textwidth]{../../uml/output/uml_v3_014}
+%        \includegraphics[trim=0cm 0cm 0cm 0cm, clip, width=\textwidth]{uml/output/uml_v3.png}
+%        \caption{The \verb|addPayment| system operation }
+        \caption{Notify cash register observers}
+        \label{fig:notify-cashregister-observer}
+    \end{center}
+\end{figure}
 
 \listoflistings % Now typeset the list
 \printbibliography
